--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@syncfusion/ej2-react-grids": "^29.1.41",
     "@syncfusion/ej2-react-navigations": "^29.1.41",
     "@syncfusion/ej2-react-splitbuttons": "^29.1.33",
+    "appwrite": "^17.0.2",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "isbot": "^5.1.27",
