--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "type": "module",
   "scripts": {
     "build": "react-router build",
-    "dev": "react-router dev",
-    "start": "react-router-serve ./build/server/index.js",
+    "dev": "set NODE_OPTIONS=--import ./instrument.server.mjs && react-router dev",
+    "start": "cross-env NODE_OPTIONS=--import ./instrument.server.mjs react-router-serve ./build/server/index.js",
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
     "@react-router/node": "^7.5.3",
     "@react-router/serve": "^7.5.3",
+    "@sentry/profiling-node": "^9.17.0",
+    "@sentry/react-router": "^9.17.0",
     "@syncfusion/ej2-react-buttons": "^29.1.34",
     "@syncfusion/ej2-react-charts": "^29.1.41",
     "@syncfusion/ej2-react-dropdowns": "^29.1.41",
@@ -32,6 +34,7 @@
     "@types/node": "^20",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "cross-env": "^7.0.3",
     "tailwindcss": "^4.1.4",
     "typescript": "^5.8.3",
     "vite": "^6.3.3",
